# gui-rust-glade

./: Cargo.toml  README.md
src/: main.rs  ui.glade
